# SK6091-Optimization

./: CMakeLists.txt  README.md
NumericalOptimization/: CMakeLists.txt  LIneSearchAlgorithm.h  NumericalOptimization.cpp  NumericalOptimization.h  specialFunction.hpp  specialFunctionImp.hpp
NumericalOptimization/heuristik/: spiralHeader - Shortcut.lnk  spiralHeader.h  spiralImp.h
NumericalOptimization/multiDimension/: multiDimen.hpp  multiDimenImp.hpp
NumericalOptimization/oneDimen/: oneDimensional.hpp  oneDimensional_Abstract.hpp
